--- a/fr/entreprise.html
+++ b/fr/entreprise.html
@@ -206,13 +206,13 @@ document.MM_returnValue = ((errors == '') && (getherrors == ''));
 <div id="menuocultomovil">
 			<ul>
 				<li><a href="information-beton-cire.html" onclick="ocultarmovil()" >Béton Ciré</a></li>
-				<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
+				<!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
 				<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
                 <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-                <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+                <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
                 <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-				<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-                <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+				<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+                <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
                 <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
                 <li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 			</ul>
@@ -237,7 +237,7 @@ document.MM_returnValue = ((errors == '') && (getherrors == ''));
         			</div>
     			</div> -->
 			</div>
-		</div><a id="conocenos" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+		</div><a id="conocenos" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
         <div class="contenedorMagenDerecha">
@@ -306,7 +306,7 @@ document.MM_returnValue = ((errors == '') && (getherrors == ''));
                     "duration": "1"}'>
 		    <h2>&nbsp;</h2>
 		  </div>
-          <a id="trabaja-con-nosotros" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a> -->
+          <a id="trabaja-con-nosotros" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a> -->
 			<!--<div id="mitadTextoDerecha" data-animate-scroll='{"x": "100",
                     "y": "0",
                     "alpha": "0",
@@ -325,7 +325,7 @@ Il y a des artisans, des techniciens, des commerciaux, des polyglottes, des pers
 
 <div style="float:none; clear:both; height:100px;"></div>
 
-<a id="contacto" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+<a id="contacto" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
         <div class="contenedorMagenDerecha">
