--- a/fr/projet-alphacement-xox.html
+++ b/fr/projet-alphacement-xox.html
@@ -159,12 +159,12 @@ in Vouliagmeni</a></li>
 <div id="menuocultomovil"><ul>
 				<li><a href="information-beton-cire.html" onclick="ocultarmovil()" >Béton Ciré</a>
                 </li><li class="link colores" data-rel="menuColores" onclick="ocultarmovil()">Colours
-                </li><li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Solutions</a></li>
+                </li><li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
                 <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-                <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+                <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
                 <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a>
-                </li><li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-                <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+                </li><!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+                <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
                 <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
                 <li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 		</ul>
