--- a/fr/renovee-salle-de-bains-avec-beton-cire-topciment.html
+++ b/fr/renovee-salle-de-bains-avec-beton-cire-topciment.html
@@ -214,10 +214,10 @@ fbq('track', "PageView"); </script> <noscript><img height="1" width="1" style="d
                 </li><li class="link colores" data-rel="menuColores" onclick="ocultarmovil()">Colours
                 </li><li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
                 <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-                <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+                <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
                 <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a>
-                </li><li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-                <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+                </li><!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+                <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
                 <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
                 <li class="link contacto" data-rel="menuContacto" onclick="ocultarmovil()">Contact</li>
 		</ul>
