--- a/fr/applicators-corner/application-de-l-agent-de-scellages.html
+++ b/fr/applicators-corner/application-de-l-agent-de-scellages.html
@@ -126,13 +126,13 @@ fbq('track', "PageView"); </script>
 		<div id="menuocultomovil">
 			<ul>
 				<li><a href="../information-beton-cire.html" onclick="ocultarmovil()">Béton Ciré</a></li>
-				<li><a href="../couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
+				<!--<li><a href="../couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
 				<li><a href="../solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
 				<li><a href="../photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-				<li><a href="../garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+				<!--<li><a href="../garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
 				<li><a href="../professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-				<li><a href="../concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-				<li><a href="../entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+				<!--<li><a href="../concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+				<!--<li><a href="../entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
 				<li><a href="../nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
 				<li><a href="../contact.html" onclick="ocultarmovil()">Contact</a></li>
 			</ul>
@@ -146,7 +146,7 @@ fbq('track', "PageView"); </script>
 	<div class="container clearfix">
 		<div id="content">
 			<section id="up" style="margin-top:135px;">
-			<a id="profesionales-microcemento" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+			<a id="profesionales-microcemento" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 			<div class="contenedorMenuOculto">
 				<div class="contenedorMagenDerecha">
 					<h1 id="queeselmicrocemento" data-animate-scroll='{"x": "-100", "y": "0", "alpha": "0", "duration": "1"}'>Application de l’agent de scellage</h1>
