--- a/fr/contact.html
+++ b/fr/contact.html
@@ -223,13 +223,13 @@ document.MM_returnValue = ((errors == '') && (getherrors == ''));
         </div>
 <div id="menuocultomovil"><ul>
 				<li><a href="information-beton-cire.html" onclick="ocultarmovil()" >Béton Ciré</a></li>
-				<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
-				<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Solutions</a></li>
+				<!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
+				<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
                 <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-                <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+                <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
                 <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-				<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-                <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+				<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+                <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
                 <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
                 <li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 		</ul>
@@ -252,7 +252,7 @@ document.MM_returnValue = ((errors == '') && (getherrors == ''));
 
             </div>
 			</div>
-		</div><a id="contactanos" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+		</div><a id="contactanos" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
         <div class="contenedorMagenDerecha">
