--- a/fr/couleurs-du-beton-cire.html
+++ b/fr/couleurs-du-beton-cire.html
@@ -237,13 +237,13 @@
       <div id="menuocultomovil">
         <ul>
           <li><a href="information-beton-cire.html" onclick="ocultarmovil()">Béton Ciré</a></li>
-          <li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
+          <!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
           <li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html" onclick="ocultarmovil()">Systèmes</a></li>
           <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a></li>
-          <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+          <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
           <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-          <li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-          <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+          <!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+          <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
           <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
           <li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
         </ul>
@@ -258,7 +258,7 @@
     style="background-image:url('../imagenes/colores-topciment.jpg'); " data-img-width="1500" data-img-height="1125"
     data-diff="100">
     <a name="top" id="top" class="ancla"
-      style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+      style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
     <div class="content-a">
       <!--<div class="contenedorTexto">
 	  <div class="content-b textoAbajoIzqda wow fadeInLeft">
@@ -272,7 +272,7 @@
   <div class="contenedorMenuOculto">
     <div class="contenedorMagenDerecha">
       <a name="colores" id="colores" class="ancla"
-        style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+        style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
       <h1 id="microcementosParaSueloH1" class="wow fadeInLeft"><span style="padding:5px;">Béton Ciré</span><br>
         <span style="padding:5px;">Couleurs</span>
       </h1>
@@ -559,7 +559,7 @@
 
   <section id="microcemento-para-paredes">
     <a name="acabados" id="acabados" class="ancla"
-      style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+      style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
     <div class="contenedorMenuOculto">
       <div class="contenedorMagenDerecha">
         <h1 class="wow fadeInDown" id="microcementosParaSueloH1"><span style="padding:5px;">Finitions</span><span
@@ -598,7 +598,7 @@
   <section id="microcemento-para-exteriores">
 
     <a name="metalicas" id="metalicas" class="ancla"
-      style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+      style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
     <div class="contenedorMenuOculto">
       <div class="contenedorMagenDerecha">
 
@@ -736,7 +736,7 @@ Con agente oxidante </strong> <br><br> -->
     <div>
 
       <a name="veladuras" id="veladuras" class="ancla"
-        style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+        style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
       <div class="contenedorMenuOculto">
         <div class="contenedorMagenDerecha">
 
@@ -973,7 +973,7 @@ Con Llana </strong> <br><br>
 
 </section> -->
   <a name="preguntas-frecuentes" id="preguntas-frecuentes" class="ancla"
-    style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+    style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
   <section id="preguntas-frecuentes">
 
