--- a/fr/efectto.html
+++ b/fr/efectto.html
@@ -218,15 +218,15 @@
 			<div id="menuocultomovil">
 				<ul>
 					<li><a href="information-beton-cire.html" onclick="ocultarmovil()">Béton Ciré</a></li>
-					<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
+					<!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
 					<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html"
 							onclick="ocultarmovil()">Systèmes</a></li>
 					<li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a>
 					</li>
-					<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+					<!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
 					<li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-					<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-					<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+					<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+					<!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
 					<li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
 					<li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 				</ul>
@@ -249,7 +249,7 @@
 						</div>
 					</div>
 					<a id="que-es-efectto"
-						style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+						style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha">
 							<h2 id="queeselmicrocemento"
@@ -441,7 +441,7 @@
 				style="background-image: url(&quot;https://www.topciment.com/imagenes/efectto/colores-efectto-quartz/Paredes.jpg&quot;); background-attachment: fixed; background-position: 50% -44.4531px;"
 				data-img-height="950" data-diff="100">
 			</div>
-			<a id="colores" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+			<a id="colores" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 			<div class="contenedorMenuOculto">
 				<div class="contenedorMagenDerecha">
 					<h2 id="queeselmicrocemento"
@@ -615,7 +615,7 @@
 		</section>
 		<div id="separador0px"></div>
 		<a id="preguntas-frecuentes-ok"
-			style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+			style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
 			<div class="contenedorMagenDerecha">
