--- a/fr/information-beton-cire.html
+++ b/fr/information-beton-cire.html
@@ -236,15 +236,15 @@ size:30px; font-weight:100" onclick="mostrarmovil()"><img src="../imagenes/icono
 			<div id="menuocultomovil">
 				<ul>
 					<li><a href="information-beton-cire.html" onclick="ocultarmovil()">Béton Ciré</a></li>
-					<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>
+					<!--<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a></li>-->
 					<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html"
 							onclick="ocultarmovil()">Systèmes</a></li>
 					<li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a>
 					</li>
-					<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+					<!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
 					<li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a></li>
-					<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-					<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+					<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+					<!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
 					<li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
 					<li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 				</ul>
@@ -275,7 +275,7 @@ size:30px; font-weight:100" onclick="mostrarmovil()"><img src="../imagenes/icono
     			</div> -->
 						</div>
 					</div><a id="que-es-microcemento"
-						style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+						style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha">
@@ -425,7 +425,7 @@ función del material y del color elegido. -->
 				style="background-image:url('../imagenes/microcemento-imagen04.jpg'); " data-img-width="1500"
 				data-img-height="750" data-diff="100">
 				<a id="cuidados-iniciales"
-					style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+					style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 				<section>
 
@@ -604,7 +604,7 @@ realiza en dos fases, la primera mediante un tapaporos y la segunda mediante dos
 		<div id="separador50px"></div>
 
 
-		<a id="ventajas" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+		<a id="ventajas" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
 			<div class="contenedorMagenDerecha">
@@ -665,7 +665,7 @@ realiza en dos fases, la primera mediante un tapaporos y la segunda mediante dos
 		</div>
 		<div id="separador50px"></div>
 
-		<a id="precio" style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+		<a id="precio" style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 		<div class="contenedorMenuOculto">
 			<div class="contenedorMagenDerecha">
@@ -831,7 +831,7 @@ realiza en dos fases, la primera mediante un tapaporos y la segunda mediante dos
 			</div>
 			<div id="separador0px"></div>
 			<a id="preguntas-frecuentes-ok"
-				style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+				style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 
 			<div class="contenedorMenuOculto">
 				<div class="contenedorMagenDerecha">
