--- a/fr/projet-malermeister.html
+++ b/fr/projet-malermeister.html
@@ -284,11 +284,11 @@
                             onclick="ocultarmovil()">Systèmes</a></li>
                     <li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a>
                     </li>
-                    <li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+                    <!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
                     <li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a>
                     </li>
-                    <li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-                    <li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+                    <!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+                    <!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
                     <li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
                     <li class="link contacto" data-rel="menuContacto" onclick="ocultarmovil()">Contact</li>
                 </ul>
