--- a/fr/sttandard.html
+++ b/fr/sttandard.html
@@ -219,14 +219,14 @@
 					<li><a href="couleurs-du-beton-cire.html" onclick="ocultarmovil()">Couleurs</a>
 					</li>
 					<li><a href="solutions-en-beton-cire-pour-toutes-les-surfaces.html"
-							onclick="ocultarmovil()">Solutions</a></li>
+							onclick="ocultarmovil()">Systèmes</a></li>
 					<li><a href="photos-du-revetement-decoratif-beton-cire.html" onclick="ocultarmovil()">Photos</a>
 					</li>
-					<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>
+					<!--<li><a href="garantie.html" onclick="ocultarmovil()">Garantie</a></li>-->
 					<li><a href="professionnels.html" onclick="ocultarmovil()">Professionnels</a>
 					</li>
-					<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>
-					<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>
+					<!--<li><a href="concessionnaires.html" onclick="ocultarmovil()">Distributeur</a></li>-->
+					<!--<li><a href="entreprise.html" onclick="ocultarmovil()">Qui sommes-nous?</a></li>-->
 					<li><a href="nouvelles.html" onclick="ocultarmovil()">Nouvelles</a></li>
 					<li><a href="contact.html" onclick="ocultarmovil()">Contact</a></li>
 				</ul>
@@ -249,7 +249,7 @@
 						</div>
 					</div>
 					<a id="que-es-sttandard"
-						style="display: block; height: 135px; margin-top: -135px; visibility: hidden;"></a>
+						style="display: block; height: 60px; margin-top: -60px; visibility: hidden;"></a>
 					<div class="contenedorMenuOculto">
 						<div class="contenedorMagenDerecha">
 							<h2 id="queeselmicrocemento"
