--- a/fr/professionnels.html
+++ b/fr/professionnels.html
@@ -525,7 +525,7 @@
               <ul class="ulF empresaF">
                 <li class="nosotrosF"><a class="linkB" href="entreprise.html">Nous</a></li>
                 <li class="noticiasF"><a class="linkB" href="nouvelles.html">Informations</a></li>
-                <li class="contactoF"><a class="linkB" href="contact.html"></a>Contact</li>
+                <li class="contactoF"><a class="linkB" href="contact.html">Contact</a></li>
                 <li class="newsletterF"><a class="linkB" href="https://zc.vg/FQ1Q2">Abonnez vous à notre newletter</a>
                 </li>
                 <li class="atencionF">Service Client Topciment du lundi au vendredi de 9h00 à 18 h </li>
