--- a/fr/concessionnaires.html
+++ b/fr/concessionnaires.html
@@ -596,7 +596,7 @@
                     <ul class="ulF empresaF">
                         <li class="nosotrosF"><a class="linkB" href="entreprise.html">Nous</a></li>
                         <li class="noticiasF"><a class="linkB" href="nouvelles.html">Informations</a></li>
-                        <li class="contactoF"><a class="linkB" href="contact.html"></a>Contact</li>
+                        <li class="contactoF"><a class="linkB" href="contact.html">Contact</a></li>
                         <li class="newsletterF"><a class="linkB" href="https://zc.vg/FQ1Q2">Abonnez vous à notre
                                 newletter</a>
                         </li>
