--- a/fr/sttandard.html
+++ b/fr/sttandard.html
@@ -8,7 +8,7 @@
 	<!--[if lt IE 9]> <script src="../js/css3-mediaqueries.js"></script> <![endif]-->
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css">
 	<link rel="icon" type="image/png" href="https://www.topciment.com/favicon.png" />
-	<meta name="Language" content="EN" />
+	<meta name="Language" content="FR" />
 
 	<link
 		href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin,latin-ext'
