--- a/fr/systemes/sttandard-beton-cire-bicomposant.html
+++ b/fr/systemes/sttandard-beton-cire-bicomposant.html
@@ -450,13 +450,13 @@
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
                         Consumption</p>
                     <div class="row">
-                        <div class="col-md-4"><span><strong>Sttandard Microbase L</strong><br> (2 layers)
+                        <div class="col-md-4"><span><strong>Sttandard Microbase L</strong><br> (2 couches)
                                 - 2,00 Kg/m2</span></div>
                         <div class="col-md-4"><span><strong>Sttandard Microbase XL</strong><br> (2
-                                layers) - 1,40 Kg/m2</span></div>
+                                couches) - 1,40 Kg/m2</span></div>
 
                         <div class="col-md-4"><span><strong>Sttandard Microbase XXL</strong><br> (2
-                                layers) - 1,70 Kg/m2</span></div>
+                                couches) - 1,70 Kg/m2</span></div>
                     </div>
                     <!-- Packaging -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
@@ -561,7 +561,7 @@
                                         src="../../imagenes/sistemas/icons/resistencia_compresion.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Compression resistance</strong>
+                                    <strong>Résistance à la compression</strong>
                                     <p>22 N/nm2 (28 jours)</p>
                                 </div>
                             </div>
@@ -573,7 +573,7 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/inflamable.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Fire resistance
+                                    <strong>Résistance au feu
                                     </strong>
                                     <p>BFL S1</p>
                                 </div>
@@ -584,7 +584,8 @@
                                 <div class="col-md-3"><img src="../../imagenes/sistemas/icons/alta_adherencia.png"
                                         class="figure-img img-fluid rounded" alt="icon" title="icon"></div>
                                 <div class="col-md-9">
-                                    <strong>Adherence to the substrate
+                                    <strong>
+                                        Adhérence au support
                                     </strong>
                                     <p>1,2 N/nm2
                                     </p>
@@ -594,11 +595,11 @@
                     </div>
                     <!-- Consumption -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
-                        Consumption
+                        Rendements
                     </p>
                     <div class="row">
                         <div class="col-md-12"><span><strong>Sttandard Microfino XS</strong> (2
-                                layers)- 0,50 Kg/m2</span></div>
+                                couches)- 0,50 Kg/m2</span></div>
                     </div>
                     <!-- Packaging -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
@@ -727,9 +728,9 @@
                         Consumption</p>
                     <div class="row">
                         <div class="col-md-4"><span><strong>Sttandard Microdeck M</strong><br>(2
-                                layers) - 1,00 Kg/m2</span></div>
+                                couches) - 1,00 Kg/m2</span></div>
                         <div class="col-md-4"><span><strong>Sttandard Microdeck L</strong><br>(2
-                                layers) - 1,00 Kg/m2</span></div>
+                                couches) - 1,00 Kg/m2</span></div>
 
                     </div>
                     <!-- Packaging -->
@@ -865,9 +866,9 @@
                         Consumption</p>
                     <div class="row">
                         <div class="col-md-12"><span><strong>Sttandard Microstone L</strong>(2
-                                layers) - 2,00 Kg/m2</span></div>
+                                couches) - 2,00 Kg/m2</span></div>
                         <div class="col-md-12"><span><strong>Sttandard Microstone XL</strong>(2
-                                layers) - 2,00 Kg/m2</span></div>
+                                couches) - 2,00 Kg/m2</span></div>
                     </div>
                     <!-- Packaging -->
                     <p class="en3" data-animate-scroll='{"x": "-100","y": "0","alpha": "0","duration": "1"}'>
