--- a/en/about-us.html
+++ b/en/about-us.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
 
     <link rel="canonical" href="https://www.topciment.com/en/about-us.html" />
 
-    <link rel="alternate" href="https://www.topciment.com/en/about-us.html" hreflang="en-GB" />
+    <link rel="alternate" href="https://www.topciment.com/en/about-us.html" hreflang="en" />
     <link rel="alternate" href="https://www.topciment.com/nosotros.html" hreflang="es-ES" />
     <link rel="alternate" href="https://www.topciment.com/fr/entreprise.html" hreflang="fr-FR" />
     <link rel="alternate" href="https://www.topciment.com/de/uber-uns.html" hreflang="de-DE" />
