--- a/en/applicators-corner/application-of-preparation-microcement-and-finish-microcement.html
+++ b/en/applicators-corner/application-of-preparation-microcement-and-finish-microcement.html
@@ -26,7 +26,7 @@
         hreflang="es-ES" />
     <link rel="alternate"
         href="https://www.topciment.com/en/applicators-corner/application-of-preparation-microcement-and-finish-microcement.html"
-        hreflang="en-GB" />
+        hreflang="en" />
     <link rel="alternate"
         href="https://www.topciment.com/fr/applicators-corner/application-de-beton-cire-de-preparation-et-de-finition.html"
         hreflang="fr-FR" />
