--- a/en/cookie-policy.html
+++ b/en/cookie-policy.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 <head>
 <meta charset="utf-8"><meta name="theme-color" content="#000"/>
 <meta name="viewport" content="width=device-width" />
@@ -25,7 +25,7 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link rel="canonical" href="https://www.topciment.com/en/cookie-policy.html" />
 
 <link rel="alternate" href="https://www.topciment.com/uso-de-cookies.html" hreflang="es-ES" />
-<link rel="alternate" href="https://www.topciment.com/en/cookie-policy.html" hreflang="en-GB" />
+<link rel="alternate" href="https://www.topciment.com/en/cookie-policy.html" hreflang="en" />
 <link rel="alternate" href="https://www.topciment.com/fr/politique-relative-aux-cookies.html" hreflang="fr-FR" />
 <link rel="alternate" href="https://www.topciment.com/de/cookie-richtlinie.html" hreflang="de-DE" />
 <link rel="alternate" href="https://www.topciment.com/it/nota-legale.html" hreflang="it-IT" />
