--- a/en/downloads.html
+++ b/en/downloads.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://www.topciment.com/en/guarantee.html" />
 
     <link rel="alternate" href="https://www.topciment.com/garantia.html" hreflang="es-ES" />
-    <link rel="alternate" href="https://www.topciment.com/en/guarantee.html" hreflang="en-GB" />
+    <link rel="alternate" href="https://www.topciment.com/en/guarantee.html" hreflang="en" />
     <link rel="alternate" href="https://www.topciment.com/fr/garantie.html" hreflang="fr-FR" />
     <link rel="alternate" href="https://www.topciment.com/de/garantie.html" hreflang="de-DE" />
     <link rel="alternate" href="https://www.topciment.com/it/garanzia.html" hreflang="it-IT" />
