--- a/en/gallery.html
+++ b/en/gallery.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -44,7 +44,7 @@
     <link rel="canonical" href="https://www.topciment.com/en/gallery.html" />
 
     <link rel="alternate" href="https://www.topciment.com/galeria.html" hreflang="es-ES" />
-    <link rel="alternate" href="https://www.topciment.com/en/gallery.html" hreflang="en-GB" />
+    <link rel="alternate" href="https://www.topciment.com/en/gallery.html" hreflang="en" />
     <link rel="alternate" href="https://www.topciment.com/fr/photos-du-revetement-decoratif-beton-cire.html"
         hreflang="fr-FR" />
     <link rel="alternate" href="https://www.topciment.com/de/galerie.html" hreflang="de-DE" />
