--- a/en/microcement-colours.html
+++ b/en/microcement-colours.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
   <link rel="canonical" href="https://www.topciment.com/en/microcement-colours.html" />
 
   <link rel="alternate" href="https://www.topciment.com/colores.html" hreflang="es-ES" />
-  <link rel="alternate" href="https://www.topciment.com/en/microcement-colours.html" hreflang="en-GB" />
+  <link rel="alternate" href="https://www.topciment.com/en/microcement-colours.html" hreflang="en" />
   <link rel="alternate" href="https://www.topciment.com/fr/couleurs-du-beton-cire.html" hreflang="fr-FR" />
   <link rel="alternate" href="https://www.topciment.com/de/mikrozement-farben.html" hreflang="de-DE" />
   <link rel="alternate" href="https://www.topciment.com/it/colori-di-microcemento.html" hreflang="it-IT" />
