--- a/en/professionals.html
+++ b/en/professionals.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
 
   <link rel="canonical" href="https://www.topciment.com/en/professionals.html" />
   <link rel="alternate" href="https://www.topciment.com/profesionales.html" hreflang="es-ES" />
-  <link rel="alternate" href="https://www.topciment.com/en/professionals.html" hreflang="en-GB" />
+  <link rel="alternate" href="https://www.topciment.com/en/professionals.html" hreflang="en" />
   <link rel="alternate" href="https://www.topciment.com/fr/professionnels.html" hreflang="fr-FR" />
   <link rel="alternate" href="https://www.topciment.com/de/die-ecke-vom-fachmann.html" hreflang="de-DE" />
   <link rel="alternate" href="https://www.topciment.com/it/professionisti.html" hreflang="it-IT" />
