--- a/en/proyecto-altea.html
+++ b/en/proyecto-altea.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -36,7 +36,7 @@
     <link rel="canonical" href="https://www.topciment.com/en/proyecto-altea.html" />
 
     <link rel="alternate" href="https://www.topciment.com/proyecto-altea.html" hreflang="es-ES" />
-    <link rel="alternate" href="https://www.topciment.com/en/proyecto-altea.html" hreflang="en-GB" />
+    <link rel="alternate" href="https://www.topciment.com/en/proyecto-altea.html" hreflang="en" />
     <link rel="alternate" href="https://www.topciment.com/fr/projet-altea.html" hreflang="fr-FR" />
     <link rel="alternate" href="https://www.topciment.com/it/proyecto-altea.html" hreflang="it-IT" />
     <link rel="alternate" href="https://www.topciment.com/de/proyecto-altea.html" hreflang="de-DE" />
