--- a/en/proyecto-hernan-cortes.html
+++ b/en/proyecto-hernan-cortes.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -41,7 +41,7 @@
     <meta name="twitter:site" content="@topciment" />
     <meta name="twitter:creator" content="@topciment" />
     <meta property="article:publisher" content="https://www.facebook.com/topciment.microcemento/" />
-    <link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en-GB" />
+    <link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en" />
     <link rel="alternate" href="https://www.topciment.com/fr/information-beton-cire.html" hreflang="fr-FR" />
     <link rel="alternate" href="https://www.topciment.com/de/mikrozement-informationen.html" hreflang="de-DE" />
     <link rel="alternate" href="https://www.topciment.com/it/informazioni-microcemento.html" hreflang="it-IT" />
