--- a/en/microcement.html
+++ b/en/microcement.html
@@ -1,5 +1,5 @@
 ﻿ <!DOCTYPE html>
- <html lang="en-GB">
+ <html lang="en">
 
  <head>
    <meta charset="utf-8">
@@ -29,7 +29,7 @@
    <link rel="canonical" href="https://www.topciment.com/en/microcement.html" />
 
    <link rel="alternate" href="https://www.topciment.com/microcementos.html" hreflang="es-ES" />
-   <link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en-GB" />
+   <link rel="alternate" href="https://www.topciment.com/en/microcement.html" hreflang="en" />
    <link rel="alternate" href="https://www.topciment.com/fr/information-beton-cire.html" hreflang="fr-FR" />
    <link rel="alternate" href="https://www.topciment.com/de/mikrozement-informationen.html" hreflang="de-DE" />
    <link rel="alternate" href="https://www.topciment.com/it/informazioni-microcemento.html" hreflang="it-IT" />
