--- a/en/systems/sttandard-two-component-microcement.html
+++ b/en/systems/sttandard-two-component-microcement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
@@ -31,7 +31,7 @@
 	<link rel="canonical" href="https://www.topciment.com/en/news.html" />
 
 	<link rel="alternate" href="https://www.topciment.com/noticias.html" hreflang="es-ES" />
-	<link rel="alternate" href="https://www.topciment.com/en/news.html" hreflang="en-GB" />
+	<link rel="alternate" href="https://www.topciment.com/en/news.html" hreflang="en" />
 	<link rel="alternate" href="https://www.topciment.com/fr/nouvelles.html" hreflang="fr-FR" />
 	<link rel="alternate" href="https://www.topciment.com/de/nachrichten.html" hreflang="de-DE" />
 	<link rel="alternate" href="https://www.topciment.com/it/notizie.html" hreflang="it-IT" />
